--- a/testepv/index.html
+++ b/testepv/index.html
@@ -11,12 +11,12 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-light">
     <!-- Header -->
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-md bg-body-tertiary p-0">
+      <div class="container-fluid text-dark bg-white">
         <a class="navbar-brand" href="#"
-          ><img src="/images/logoPV.jpg" alt="" srcset=""
+          ><img src="./images/logoPV.jpg" alt srcset
         /></a>
         <button
           class="navbar-toggler"
@@ -41,16 +41,81 @@
               <a class="nav-link" href="#">Contato</a>
             </li>
           </ul>
-          <button class="btn btn-outline-success" type="submit">
+          <button
+            class="btn btn-outline-info"
+            type="button"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+          >
             Entre aqui
           </button>
+          <!-- Modal -->
+          <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Login</h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <div class="mb-3 row">
+                    <label for="staticEmail" class="col-sm-2 col-form-label"
+                      >Email</label
+                    >
+                    <div class="col-sm-10">
+                      <input
+                        type="text"
+                        readonly
+                        class="form-control-plaintext"
+                        id="staticEmail"
+                        value="email@example.com"
+                      />
+                    </div>
+                  </div>
+                  <div class="mb-3 row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label"
+                      >Senha</label
+                    >
+                    <div class="col-sm-10">
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="inputPassword"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Registrar-se
+                  </button>
+                  <button type="button" class="btn btn-info">Login</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
     <!-- Banner -->
-    <img src="/images/banner1.png" class="img-fluid w-100" alt="..." />
+    <img src="./images/banner1.png" class="img-fluid w-100" alt="..." />
     <!-- Atendimento -->
-    <div class="container text-center">
+    <div class="container text-center pt-3 pb-3">
       <h3>Atendimento Oftalmológico</h3>
       <p>
         Nossa experiência e comprometimento profissional aliados a uma ampla
@@ -59,114 +124,189 @@
         tratamento de saúde ocular.
       </p>
       <!-- Cards -->
-      <div class="row">
-        <div class="card col" style="width: 18rem">
-          <img src="/images/catarata.jpg" class="card-img-top" alt="..." />
+      <div class="row gap-3">
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/catarata.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
           <div class="card-body">
             <h5 class="card-title">Catarata</h5>
-
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
           </div>
         </div>
-        <div class="card col" style="width: 18rem">
-          <img src="/images/ceratocone.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card col" style="width: 18rem">
+        <div class="card col p-0" style="width: 18rem">
           <img
-            src="/images/cirurgia_refrativa.jpg"
-            class="card-img-top"
+            src="./images/ceratocone.jpg"
+            class="card-img-top card-img-bottom"
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Ceratocone</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
           </div>
         </div>
-        <div class="card col" style="width: 18rem">
+        <div class="card col p-0" style="width: 18rem">
           <img
-            src="/images/cornea_e_conjutiva.jpg"
-            class="card-img-top"
+            src="./images/cirurgia_refrativa.jpg"
+            class="card-img-top card-img-bottom"
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cirurgia Refrativa</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
           </div>
         </div>
-        <div class="card col" style="width: 18rem">
-          <img src="/images/glaucoma.jpg" class="card-img-top" alt="..." />
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/cornea_e_conjutiva.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cornea e Conjutiva</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
+          </div>
+        </div>
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/glaucoma.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Glaucoma</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
           </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/images/lente_de_contato.jpg"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <br />
+      <div class="row gap-3">
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/lente_de_contato.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Lente de Contato</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/images/lente_intraocular_premium.jpg"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/lente_intraocular_premium.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Lentes Intraocular</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/images/oftalmologia_geral.jpg"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </p>
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/oftalmologia_geral.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Oftalmologia Geral</h5>
+            <p class="card-text">
+              <a href="#" class="btn btn-info">Saiba Mais</a>
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/images/oftalmopediatria.jpg"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/oftalmopediatria.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Oftalmopediatria</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img src="/images/plastica_ocular.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card col p-0" style="width: 18rem">
+          <img
+            src="./images/plastica_ocular.jpg"
+            class="card-img-top card-img-bottom"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Plastica Ocular</h5>
+            <a href="#" class="btn btn-info">Saiba Mais</a>
+          </div>
         </div>
       </div>
     </div>
+    <!-- WhatsApp -->
+    <div class="card mb-3 container-fluid" style="max-width: 1320px">
+      <div class="row g-0">
+        <div class="col-md-1 pt-3">
+          <img
+            src="./images/icone_consulta.jpg"
+            class="img-fluid rounded-start"
+            alt="..."
+          />
+        </div>
+        <div class="col-md-6">
+          <div class="card-body">
+            <h5 class="card-title">Consulta com um oftalmologista?</h5>
+            <p class="card-text">
+              Caso necessite de atendimento oftalmológico em SP, clique e
+              converse diretamente com nossa equipe via WhatsApp: <br /><br />
+              Segunda a Sexta: 8h – 17hs <br />
+              Sábados: 8h – 12hs <br /><br />
+              Consultas somente com hora marcada Atendimento durante horário
+              comercial
+            </p>
+          </div>
+        </div>
+        <div class="col-md-5 align-self-center">
+          <div class="card-body text-center">
+            <a href="#" class="btn btn-success w-50"
+              ><img src="./images/whatsapp.png" class="img-fluid w-25 p-1" />
+              Fale no Whatsapp</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Conheça a clinica -->
+    <div class="card mb-3 container-fluid" style="max-width: 1320px">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img
+            src="./images/clinica.jpg"
+            class="img-fluid rounded-start"
+            alt="..."
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">
+              Conheça nossa clínica de olhos em São Paulo
+            </h5>
+            <p class="card-text">
+              A Clínica Pega Visão atua na área de oftalmologia desde 2023,
+              oferecendo exames, cirurgias e consultas oftalmológicas em São
+              Paulo aliados aos melhores profissionais do Brasil e do mundo.
+            </p>
+            <p class="card-text">
+              <small class="text-body-secondary"
+                >Conheça um pouco mais sobre nossa história e trajetória através
+                dos anos.</small
+              >
+            </p>
+            <a href="#" class="btn btn-info">Sobre nós</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
