--- a/testepv/index.html
+++ b/testepv/index.html
@@ -306,6 +306,107 @@
         </div>
       </div>
     </div>
+    <!-- Convenios -->
+    <div class="container px-4 py-5" id="custom-cards">
+      <h2 class="pb-2 border-bottom text-center">
+        Convênios e Planos de Saúde
+      </h2>
+      <p class="text-center">
+        No Clínica Pega Visão, prezamos pela conveniência de nossos pacientes,
+        por isso trabalhamos com os principais convênios e seguros de saúde.
+        Clique no botão abaixo e consulte a lista completa dos convênios que
+        aceitamos.
+      </p>
+      <div class="row bg-white">
+        <div class="col-6 col-md-2 p-2">
+          <img src="./images/bradesco_saude.png" class="img-fluid" alt="..." />
+        </div>
+        <div class="col-6 col-md-2 p-2">
+          <img src="./images/itau_porto.png" class="img-fluid" alt="..." />
+        </div>
+        <div class="col-6 col-md-2 p-2">
+          <img src="./images/unimed.png" class="img-fluid" alt="..." />
+        </div>
+        <div class="col-6 col-md-2 p-2">
+          <img
+            src="./images/sulamerica_saude.png"
+            class="img-fluid"
+            alt="..."
+          />
+        </div>
+        <div class="text-center col-6 col-md-2 p-2">
+          <img src="./images/portoseguro.png" class="img-fluid" alt="..." />
+        </div>
+        <div class="text-center col-6 col-md-2 p-2">
+          <img src="./images/unafisco.jpg" class="img-fluid" alt="..." />
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <div class="container">
+      <footer class="py-3">
+        <div class="row">
+          <div class="col-6 col-md-2 mb-3">
+            <h5>Nosso Endereço:</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <p class="p-0 m-0 text-body-secondary">
+                  Av. Pega Visão, 011 – Mooca, São Paulo – SP, 00000-000 <br />
+                  CNPJ: 00.000.000/0000-00
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-6 col-md-4 mb-3">
+            <h5>Contatos:</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <p class="p-0 m-0 text-body-secondary">
+                  E-mail: cpv@pegavisao.com.br
+                </p>
+              </li>
+              <li class="nav-item mb-2">
+                <p class="p-0 m-0 text-body-secondary">TEL: (00) 0000-0000</p>
+              </li>
+              <li class="nav-item mb-2">
+                <p class="p-0 m-0 text-body-secondary">Fale conosco</p>
+              </li>
+              <li class="nav-item mb-2">
+                <p class="p-0 m-0 text-body-secondary">
+                  WhatsApp: (00) 00000-0000
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-5 offset-md-1 mb-3">
+            <form>
+              <h5>Se inscreva na nossa newsletter!</h5>
+              <p>Receba novidades em primeira mão!</p>
+              <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                <label for="newsletter1" class="visually-hidden"
+                  >Email Address</label
+                >
+                <input
+                  id="newsletter1"
+                  type="text"
+                  class="form-control"
+                  placeholder="E-mail"
+                />
+                <button class="btn btn-primary" type="button">Confirmar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div
+          class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
+        >
+          <p class=" container text-center">© 2024 - Clínica Pega Visão - Todos os direitos reservados - Desenvolvido por Enzo, Fabio e Leandro</p>
+        </div>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
