formulario cadastro pronto

--- a/testepv/index.html
+++ b/testepv/index.html
@@ -70,16 +70,14 @@
                 </div>
                 <div class="modal-body">
                   <div class="mb-3 row">
-                    <label for="staticEmail" class="col-sm-2 col-form-label"
+                    <label for="inputEmail" class="col-sm-2 col-form-label"
                       >Email</label
                     >
                     <div class="col-sm-10">
                       <input
-                        type="text"
-                        readonly
-                        class="form-control-plaintext"
-                        id="staticEmail"
-                        value="email@example.com"
+                        type="email"
+                        class="form-control"
+                        id="inputEmail"
                       />
                     </div>
                   </div>
@@ -102,7 +100,7 @@
                     class="btn btn-secondary"
                     data-bs-dismiss="modal"
                   >
-                    Registrar-se
+                    <a href="./cadastro.html" style="text-decoration: none; color: #FFF;">Registrar-se</a>
                   </button>
                   <button type="button" class="btn btn-info">Login</button>
                 </div>
