--- a/testepv/index.html
+++ b/testepv/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clinica Pega Visão</title>
+    <link rel="shortcut icon" href="./images/icone.ico" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,7 +39,7 @@
               <a class="nav-link" href="#">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a class="nav-link" href="#footer">Contato</a>
             </li>
           </ul>
           <button
@@ -342,7 +343,7 @@
     </div>
     <!-- Footer -->
     <div class="container">
-      <footer class="py-3">
+      <footer id="footer" class="py-3">
         <div class="row">
           <div class="col-6 col-md-2 mb-3">
             <h5>Nosso Endereço:</h5>
