--- a/testepv/index.html
+++ b/testepv/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+              <a class="nav-link active" aria-current="page" href="./sobre.html">Sobre</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Serviços</a>
